# hello-manim

./: .#README.md  .gitignore  README.md  README.org  build.py  data-nepal-pop-projected.json  energy.py  energy2.py  index.html  main.org  main.py  pyproject.toml  run.py  script.html  script.txt  setup.py  temp.py  tutorial.org
assignments/: assignment_1.py  assignment_10.py  assignment_11.py  assignment_12.py  assignment_13.py  assignment_14.py  assignment_15.py  assignment_16.py  assignment_3.py  assignment_4.py  assignment_5.py  assignment_6.py  assignment_7.py  assignment_9.py  selection_question.py  training_2.py
assignments/assignment_2/: assignment_2.py
assignments/reviews/deprecation/: polished_depreciation.py  raw_depreciation.py
assignments/reviews/deprecation_problem/: polished_deprecation_problem.py  raw_deprecation_problem.py
assignments/reviews/energy_video_1/: energy_1_polished.py
assignments/reviews/energy_video_2/: energy_2_polished.py
assignments/reviews/population_growth/: data-nepal-pop.json  polished_population_growth.py  pop-graph  raw_population_growth.py
assignments/reviews/probability/: treed  vennd  (+3 more)
explore/: add_more_text.py  add_text.py  graph_basic.py  latex_align_and_braces_crude.py  latex_align_and_braces_nice.py  latex_basic.py  latex_color.py  rotation_and_highligh.py  shape_and_text.py  shapes.py
ipython_snippets/: algebric_calc.py  angle_vector.py  braces.py  dot_product_projection.py  vector_notation.py
manim/: .gitignore  AUTHORS  ChangeLog  README.md  helper.py  pyproject.toml  setup.py  tutorial.org
manim/manimlib/: compounds.py  constants.py  ctex_template.tex  imports.py  tex_template.tex
manim/manimlib.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  requires.txt
manim/manimlib/chanimlib/: compounds.py  imports.py
manim/manimlib/for_3b1b_videos/: pi_creature.py  pi_creature_scene.py
src/: shapes_area.py  vector_product.py
(+8 files in other folders)
