[tool.poetry]
name = "hello-manim"
version = "0.1.0"
description = ""
authors = ["hemanta212 <sharmahemanta.212@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
manimlib = "^0.1.11"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
python-language-server = "^0.36.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
