[tool.poetry]
name = "hello-manim"
version = "0.1.0"
description = ""
authors = ["hemanta212 <sharmahemanta.212@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
argparse = "^1.4.0"
colour = "^0.1.5"
numpy = "^1.19.4"
opencv-python = "^4.4.0"
Pillow = "^8.0.1"
progressbar = "^2.5"
pycairo = "^1.20.0"
pydub = "^0.24.1"
Pygments = "^2.7.3"
scipy = "^1.5.4"
tqdm = "^4.54.1"
manimlib = {path = "manim"}
python-language-server = {extras = ["all"], version = "^0.36.2"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
python-language-server = {extras = ["all"], version = "^0.36.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
