[tool.poetry]
name = "manimlib"
version = "0.1.13"
description = "Manim with chanim support"
authors = ["hemanta212 <sharmahemanta.212@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.4"
argparse = "^1.4.0"
colour = "^0.1.5"
opencv-python = "^4.4.0.46"
pillow = "^8.0.1"
progressbar = "^2.5"
pycairo = "^1.20.0"
pydub = "^0.24.1"
pygments = "^2.7.3"
scipy = "^1.5.4"
tqdm = "^4.54.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
python-language-server = "^0.36.0"

[tool.poetry.scripts]
manim = 'manimlib:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
